tests/fail-postinc_postdec1.art
// check postinc, postdec

int main()
{
	int x = 10;
	x++; // ok
	15++; // error 
}
